objects/ssot__EmploymentOfferVettingEvaluation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmploymentOfferId__c</fullName>
        <label>Employment Offer</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Employment Offer Vetting Evaluation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VettingEvaluationId__c</fullName>
        <label>Vetting Evaluation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366627324_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmploymentOfferVettingEvaluation_Emp_rel</label>
        <referenceTo>ssot__EmploymentOffer__dlm</referenceTo>
        <relationshipLabel>EmploymentOfferVettingEvaluation_Emp_rel</relationshipLabel>
        <relationshipName>rel_1727366627324_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366703398_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmploymentOfferVettingEvaluation_Vet_rel</label>
        <referenceTo>ssot__VettingEvaluation__dlm</referenceTo>
        <relationshipLabel>EmploymentOfferVettingEvaluation_Vet_rel</relationshipLabel>
        <relationshipName>rel_1727366703398_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>